--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <p>
       During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
     </p>
-    <div><a href="blog.html">(micro)Blog</a></div>
+    <div><a href="blog.html">Blog</a></div>
+    <div><a href="microblog.html">uBlog</a></div>
     <div><a href="school.html">School</a></div>
     <div><a href="resume.html">Resume</a></div>
   </body>
