ublog updates with gh api; deleted some old shit

--- a/school.html
+++ b/school.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
-    <h3 id="name">Ishan Deshpande</h3>
-    <h1 id="school">School</h1>
+    <h3 id="name">Ishan Deshpande's School</h3>
     <div class="semester">
       <h3 class="semester-title">Fall 2024</h3>
       <details class="class">
