--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
     <h3 id="name">Ishan Deshpande</h3>
     <b>Hi!</b>
-    <p>
-      I am Ishan Deshpande, a senior pursuing a integrated master's degree in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development and operating systems development. I enjoy seeing the products I develop come to life in my hands. Currently, I am the Platform Lead on the UT Longhorn Racing Solar Team, where I work on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle.
-    </p>
-    <p>
-      During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
-    </p>
-    <div><a href="blog.html">Blog</a></div>
-    <div><a href="ublog.html">uBlog</a></div>
-    <div><a href="school.html">School</a></div>
-    <div><a href="resume.html">Resume</a></div>
+    <div id="about-me">
+      <div id="about-desc">
+	<p>
+	I am Ishan Deshpande, a masters' student in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development and systems level work. I enjoy seeing the products I develop come to life in my hands. Currently, I am the next Chief Engineer on the UT Longhorn Racing Solar Team, where I work with the team on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle.
+	</p>
+	<p>
+	This summer, I'll be interning at Meta Reality Labs working on embedded development with their next-level research teams. During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
+	</p>
+	<div><a href="blog.html">Blog</a></div>
+	<div><a href="ublog.html">uBlog</a></div>
+	<div><a href="school.html">School</a></div>
+	<div><a href="resume.html">Resume</a></div>
+      </div>
+      <img id="profile" src="profile.jpg">
+    </div>
   </body>
 </html>
