--- a/school.html
+++ b/school.html
@@ -10,6 +10,25 @@
     <h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
     <h3 id="name">Ishan Deshpande's School</h3>
     <div class="semester">
+      <h3 class="semester-title">Spring 2025</h3>
+      <details class="class">
+        <summary><b>ECE380L.12: Embedded and Real-Time Systems / Real-Time Operating Systems -- Dr. Andreas Gerstlauer</b></summary>
+	Explore real-time operating systems; implementation of context switching, threads, multitasking, real-time scheduling, synchronization, communication, storage, file systems, memory management, process linking and loading, hardware interfacing, and networking; debugging and testing; operating system performance, including latency, jitter, deadlines, deadlocks, and starvation; real-time systems, including data acquisition, sensing, actuating, digital control, signal processing, and robotics.
+      </details>
+      <details class="class">
+        <summary><b>ECE360P: Concurrent and Distributed Systems (dropped early) -- Dr. Vijay Garg</b></summary>
+	Investigate concurrency, lock-based and lock-free synchronization, resource allocation, multi-threaded programming, distributed systems programming, mutual exclusion, global snapshots, global property evaluation, message ordering, consensus, Byzantine agreement, and commit protocols. 
+      </details>
+      <details class="class">
+        <summary><b>ECE381C: Verification and Validation -- Dr. Sarfraz Khurshid</b></summary>
+	This course studies analytical techniques and tools for verification and validation, which are two key activities in developing higher quality software systems. Conceptually, verification addresses the problem of determining if we are building the system right, and validation addresses the problem of determining if we are building the right system. The course is or- ganized as a series of research/tool paper presentations and discussions. The selected papers will cover traditional and state-of-the-art techniques. The course content will cover some topics from specification languages and tool-sets, techniques for dynamic analysis, such as white box and black box testing, equivalence partitioning, test criteria and automation, regression testing and debugging, techniques for static analysis, such as shape analysis, techniques for systematic software testing, such as symbolic execution and model checking, including explicit-state, stateless, and bounded model checking, as well as heuristics-driven techniques, such as those that employ genetic algorithms or other artificial intelligence based heuristics. Parallel and incremental techniques may also be covered depending on the specific papers chosen.
+      </details>
+      <details class="class">
+        <summary><b>ECE464H: Honors Senior Design Project -- Dr. Leonard Register</b></summary>
+	Designed a processor simulator validation toolset aimed at capturing the limitations of gem5, a widely used architectural simulator, in accurately modeling real processors. While gem5 provides a cost-effective solution for exploring architectural designs, its architectural simplifications make some of its simulated behaviors deviate from real world performance. In order to help researchers and architects in the industry better understand whether the changes they make in gem5 can be extrapolated to hardware, our proposed tool collected performance data from both gem5 simulations and real processors and provides a framework for users to compare these results through performance curves.
+      </details>
+    </div>
+    <div class="semester">
       <h3 class="semester-title">Fall 2024</h3>
       <details class="class">
         <summary><b>ECE364D: Intro to Engineering Design -- Dr. Leonard Register</b></summary>
