--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
-    <h3 id="name">Ishan Deshpande</h3>
+    <h3 id="name">Ishan Deshpande's Blog</h3>
     <div id="posts"></div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
