--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 	<p>
 	This summer, I'll be interning at Meta Reality Labs working on embedded development with their next-level research teams. During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
 	</p>
-	<div><a href="blog.html">Blog</a></div>
-	<div><a href="ublog.html">uBlog</a></div>
-	<div><a href="school.html">School</a></div>
-	<div><a href="resume.html">Resume</a></div>
+	<div><a href="blog">Blog</a></div>
+	<div><a href="ublog">uBlog</a></div>
+	<div><a href="school">School</a></div>
+	<div><a href="resume">Resume</a></div>
       </div>
       <img id="profile" src="profile.jpg">
     </div>
