--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
-    <h3 id="name">Ishan Deshpande</h3>
+    <div class="header">
+      <div>
+	<h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
+	<h3 id="name">Ishan Deshpande</h3>
+      </div>
+      <ul class="nav">
+	<li><a href="blog">Blog</a></li>
+	<li><a href="ublog">uBlog</a></li>
+	<li><a href="school">School</a></li>
+	<li><a href="resume">Resume</a></li>
+      </ul>
+    </div>
     <b>Hi!</b>
     <div id="about-me">
       <div id="about-desc">
@@ -19,10 +29,6 @@
 	<p>
 	This summer, I'll be interning at Meta Reality Labs working on embedded development with their next-level research teams. During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
 	</p>
-	<div><a href="blog">Blog</a></div>
-	<div><a href="ublog">uBlog</a></div>
-	<div><a href="school">School</a></div>
-	<div><a href="resume">Resume</a></div>
       </div>
       <img id="profile" src="profile.jpg">
     </div>
