color and hover effect

--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
   <body>
     <div class="header">
       <div>
-	<h1 id="title"><a href="http://www.ishdeshpa.com" style="color:#000000; text-decoration:none;">ishdeshpa.com</a></h1>
+	<h1 id="title"><a href="http://www.ishdeshpa.com" style="text-decoration:none;">ishdeshpa.com</a></h1>
 	<h3 id="name">Ishan Deshpande</h3>
       </div>
       <ul class="nav">
-	<li><a href="blog">Blog</a></li>
-	<li><a href="ublog">uBlog</a></li>
-	<li><a href="school">School</a></li>
-	<li><a href="resume">Resume</a></li>
+	<li>
+	  <a href="/blog"><div class="hover-effect">Blog</div></a>
+	</li>
+	<li>
+	  <a href="/ublog"><div class="hover-effect">uBlog</div></a>
+	</li>
+	<li>
+	  <a href="/school"><div class="hover-effect">School</div></a>
+	</li>
+	<li>
+	  <a href="/resume"><div class="hover-effect">Resume</div></a>
+	</li>
       </ul>
     </div>
     <b>Hi!</b>
