--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <div>
-	<h1 id="title"><a href="http://www.ishdeshpa.com" style="text-decoration:none;">ishdeshpa.com</a></h1>
+	<h1 id="title" class="hover-effect"><a href="http://www.ishdeshpa.com">ishdeshpa.com</a></h1>
 	<h3 id="name">Ishan Deshpande</h3>
       </div>
       <ul class="nav">
