--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	  <a href="#school"><div class="hover-effect">School</div></a>
 	</li>
 	<li>
-	  <a href="#resume"><div class="hover-effect">Resume</div></a>
+	  <a href="/resume"><div class="hover-effect">Resume</div></a>
 	</li>
 	<li>
 	  <a href="#ublog"><div class="hover-effect">uBlog</div></a>
