added first post

--- a/ublog/index.html
+++ b/ublog/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>ishdeshpa.com</title>
     <link href="../style.css" rel="stylesheet">
+    <base target="_parent">
   </head>
   <body>
     <p><b> mi·cro·blog /ˈmīkrōˌbläɡ/ noun </b></p>
