--- a/school/index.html
+++ b/school/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ishdeshpa.com</title>
     <link href="../style.css" rel="stylesheet">
+    <base target="_parent">
   </head>
   <body>
     <div class="semester">
