--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
       </div>
       <ul class="nav">
 	<li>
-	  <a href="#school"><div class="hover-effect">School</div></a>
-	</li>
-	<li>
-	  <a href="/resume"><div class="hover-effect">Resume</div></a>
+	  <a href="#blog"><div class="hover-effect">Blog</div></a>
 	</li>
 	<li>
 	  <a href="#ublog"><div class="hover-effect">uBlog</div></a>
 	</li>
 	<li>
-	  <a href="#blog"><div class="hover-effect">Blog</div></a>
+	  <a href="#resume"><div class="hover-effect">Resume</div></a>
+	</li>
+	<li>
+	  <a href="#school"><div class="hover-effect">School</div></a>
 	</li>
       </ul>
     </div>
@@ -68,10 +68,12 @@
       </div>
       <img id="profile" src="profile.jpg">
     </div>
-    <h3 id="ublog">uBlog</h3>
-    <iframe height="1000" src="/ublog"></iframe>
     <h3 id="blog">Blog</h3>
     <iframe class="resize-iframe" scrolling="no" src="/blog"></iframe>
+    <h3 id="ublog">uBlog</h3>
+    <iframe height="500" src="/ublog"></iframe>
+    <h3 id="resume">Resume</h3>
+    <iframe class="resize-iframe" scrolling="no" src="/resume"></iframe>
     <h3 id="school">School</h3>
     <iframe class="resize-iframe" scrolling="no" src="/school"></iframe>
   </body>
