--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div style="display: flex;">
 	  <h3 id="name">Ishan Deshpande</h3>
 	  <div id="links">
-	    <a href="https://www.linkedin.com/in/ishdeshpa/"> <img src="https://static-00.iconduck.com/assets.00/linkedin-original-icon-256x256-bckcotyp.png" alt="linkedin" style="width:20px;height:20px;"></img></a>
+	    <a href="https://www.linkedin.com/in/ishdeshpa/"> <img src="https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/linkedin-512.png" alt="linkedin" style="width:20px;height:20px;"></img></a>
 	    <a href="https://github.com/IshDeshpa/"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Github-512.png" alt="github" style="width:20px;height:20px;"></img></a>
 	    <a href="mailto:ishdeshpa@utexas.edu"><img src="https://images.icon-icons.com/2631/PNG/512/gmail_new_logo_icon_159149.png" alt="mail" style="width:20px;height:20px;"></img></a>
 
@@ -59,12 +59,12 @@
     <b>Hi!</b>
     <div id="about-me">
       <div id="about-desc">
-	<p>
-	I am Ishan Deshpande, a masters' student in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development and systems level work. I enjoy seeing the products I develop come to life in my hands. Currently, I am the next Chief Engineer on the UT Longhorn Racing Solar Team, where I work with the team on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle.
-	</p>
-	<p>
-	This summer, I'm interning at Meta Reality Labs working on embedded development for their VR/AR technologies. During my last summer internship at Tesla, I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
-	</p>
+      <p>
+      I am Ishan Deshpande, a masters' student in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development and systems level work. I enjoy seeing the products I develop come to life in my hands. Currently, I am the next Chief Engineer on the UT Longhorn Racing Solar Team, where I work with the team on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle.
+      </p>
+      <p>
+      My last summer internship at Meta Reality Labs involved developing support firmware and software for their internal research products for AR and VR. Before that, I was an intern at Tesla, where I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.I am Ishan Deshpande, a student pursuing a integrated master's degree in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development, particularly in control-related fields such as robotics or vehicle control, as well as consumer electronics. I enjoy seeing the products I develop come to life in my hands. Currently, I am the Chief Engineer on the UT Longhorn Racing Solar Team, where I work on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle. My last summer internship at Meta Reality Labs involved developing support firmware and software for their internal research products for AR and VR. Before that, I was an intern at Tesla, where I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
+      </p>
       </div>
       <img id="profile" src="profile.jpg">
     </div>
