--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="about-me">
       <div id="about-desc">
       <p>
-      I am Ishan Deshpande, a student pursuing a integrated master's degree in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development, particularly in control-related fields such as robotics or vehicle control, as well as consumer electronics. I enjoy seeing the products I develop come to life in my hands. Currently, I am the Chief Engineer on the UT Longhorn Racing Solar Team, where I work on ARM-based embedded systems and a real-time operating system (RTOS) for controlling a solar-powered vehicle. 
+      I am Ishan Deshpande, a student pursuing a integrated master's degree in Electrical and Computer Engineering at UT Austin. My passion lies in embedded software development and low-level development. I enjoy seeing the products I develop come to life in my hands. Currently, I am the Tracksim Lead on the UT Longhorn Racing Solar Team, where I lead a team of 3 on modeling energy losses for the vehicle. 
       </p>
       <p>
       My last summer internship at Meta Reality Labs involved developing support firmware and software for their internal research products for AR and VR. Before that, I was an intern at Tesla, where I had the opportunity to work on Body Controls Firmware for their Electronic Control Units on a wide array of vehicles. Previously, I was an intern at Garmin, pioneering advanced control systems for flight and navigation. In my free time, I like to listen to albums, play table tennis, and produce music.
