--- a/school/index.html
+++ b/school/index.html
@@ -48,9 +48,9 @@
 	<details class="class">
 	  <summary><b>Tesla: Body Controls Firmware Intern -- Palo Alto, CA</b></summary>
 	    <ul>
-	      <li>Improved robustness of on-vehicle firmware updates by developing a UART/CAN bootloader (custom linker script and
-  flash memory driver)</li>
-	      <li>Increased remote testing accessibility by designing a 12V/100W power supply PCB featuring USB-C Power Delivery</li>
+	      <li> Enhanced future firmware reliability by implementing tooling PC-Lint for static code analysis on Renesas microcontroller </li>
+	      <li> Assessed non-volatile memory usage across all body control modules by introducing CAN logging for EEPROM usage </li>
+	      <li> Improved vehicle performance by fixing various bugs and implementing features related to sensor calibration and interfacing (mirror heaters, trailer brake sensors, overhead lights, door actuation) </li>
 	    </ul>
 	</details>
       </div>
