--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    <a href="https://www.linkedin.com/in/ishdeshpa/"> <img src="https://cdn1.iconfinder.com/data/icons/social-media-set-for-free/32/linkedin-512.png" alt="linkedin" style="width:20px;height:20px;"></img></a>
 	    <a href="https://github.com/IshDeshpa/"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Github-512.png" alt="github" style="width:20px;height:20px;"></img></a>
 	    <a href="mailto:ishdeshpa@utexas.edu"><img src="https://images.icon-icons.com/2631/PNG/512/gmail_new_logo_icon_159149.png" alt="mail" style="width:20px;height:20px;"></img></a>
-
+	    <a rel="me" href="https://mastodon.social/@ishdeshpa"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Mastodon_logotype_%28simple%29_new_hue.svg/2048px-Mastodon_logotype_%28simple%29_new_hue.svg.png" alt="mastodon" style="width:20px;height:20px;"></a>
 	  </div>
 	</div>
       </div>
