updated school summary and resume

--- a/school/index.html
+++ b/school/index.html
@@ -10,6 +10,40 @@
   <body>
     <div class="school-container">
       <div class="semester">
+	<h3 class="semester-title">Fall 2025</h3>
+	<details class="class">
+	  <summary><b>ECE382M.7: VLSI Design</b></summary>
+	  This course covered the fundamental process of designing CMOS VLSI circuits. It began with a review of CMOS transistor operation and the CMOS manufacturing process, followed by an in-depth study of CMOS logic gate implementation, including layout, design rules, and circuit families. The course then addressed timing and power analysis, interconnect issues, and techniques for optimizing performance and energy efficiency. Additional topics included datapath design with an emphasis on adders, and memory array design, covering SRAM and DRAM cells and clocking. The course concluded with a survey of peripheral topics such as functional verification, testing and design-for-test, electrical effects, and future trends in VLSI design, with potential guest lectures from industry on real-world design practices.
+	</details>
+	<details class="class">
+	  <summary><b>ECE382V: Quantum Computing Systems: From a Software and Architecture Perspective</b></summary>
+	  Covers topics such as:
+	  <ul>
+	    <li> Basics of quantum computing (superposition, entanglement) and fundamental quantum algorithms (Bernstein Vazirani, Grover etc.) </li>
+	    <li> Quantum hardware limitations (noisy qubit devices and imperfect quantum operations) </li>
+	    <li> Different qubit technologies and their constraints </li>
+	    <li> Noisy Intermediate Scale Quantum (NISQ) computing </li>
+	    <li> Distributed quantum computing </li>
+	    <li> Error mitigation for NISQ applications </li>
+	    <li> Fault Tolerant Quantum Computing </li>
+	    <li> Quantum error correction for FTQCs (surface codes, QLDPC codes) </li>
+	    <li> Quantum cloud services </li>
+	  </ul>
+	</details>
+      </div>
+
+      <div class="semester">
+	<h3 class="semester-title">Summer 2025</h3>
+	<details class="class">
+	  <summary><b>Meta Reality Labs: Codec Avatars Embedded Intern</b></summary>
+	    <ul>
+	      <li> Accelerated sensor prototyping by building a custom assembler, emulator, and verifier for a programmable I/O state machine on FPGA, reducing development time and enabling flexible sensor integration. </li>
+	      <li> Improved model fidelity by integrating ultrasonic, radar, and IMU data to capture facial movements. </li>
+	    </ul>
+	</details>
+      </div>
+
+      <div class="semester">
 	<h3 class="semester-title">Spring 2025</h3>
 	<details class="class">
 	  <summary><b>ECE380L.12: Embedded and Real-Time Systems / Real-Time Operating Systems -- Dr. Andreas Gerstlauer</b></summary>
@@ -28,6 +62,7 @@
 	  Designed a processor simulator validation toolset aimed at capturing the limitations of gem5, a widely used architectural simulator, in accurately modeling real processors. While gem5 provides a cost-effective solution for exploring architectural designs, its architectural simplifications make some of its simulated behaviors deviate from real world performance. In order to help researchers and architects in the industry better understand whether the changes they make in gem5 can be extrapolated to hardware, our proposed tool collected performance data from both gem5 simulations and real processors and provides a framework for users to compare these results through performance curves.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Fall 2024</h3>
 	<details class="class">
@@ -43,6 +78,7 @@
 	  Examine characteristics of instruction set architecture and microarchitecture; physical and virtual memory; caches and cache design; interrupts and exceptions; integer and floating-point arithmetic; I/O processing; buses; pipelining, out-of-order execution, branch prediction, and other performance enhancements; design trade-offs; and case studies of commercial microprocessors. Explore behavioral-level design of a microarchitecture in a laboratory setting.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Summer 2024</h3>
 	<details class="class">
@@ -54,6 +90,7 @@
 	    </ul>
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Spring 2024</h3>
 	<details class="class">
@@ -69,6 +106,7 @@
 	  Learned about programming language representation, common transformations, analyses, and optimizations, intermediate languages, and design choices in lecture and learned about the software engineering challenges of implementing a compiler and simple runtime support for an imperative, object-oriented language in programming labs. Used LLVM framework to create a front-end and back-end for "Classroom Object Oriented Language" (COOL).
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Fall 2023</h3>
 	<details class="class">
@@ -88,6 +126,7 @@
 	  In Introduction to Stochastic Processes, I discussed generating functions and their utility in analyzing random processes, then random processes starting in the discrete-time domain (simple random walk, branching process & probability of extinction of branching process), then moving to the continuous time domain (continuous time Markov process, Poisson process, Brownian motion), and also analyzing rate matrices & generator matrices.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Summer 2023</h3>
 	<details class="class">
@@ -98,6 +137,7 @@
 	    </ul>
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Spring 2023</h3>
 	<details class="class">
@@ -117,6 +157,7 @@
 	  In Software Design and Implementation II, I learned about object-oriented programming, the four pillars of OOP (encapsulation, polymorphism, abstraction, inheritance), design & implementation of Java programs, JavaFX usage, and some multithreading & network communication. I applied these skills through several projects and one final project.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Fall 2022</h3>
 	<details class="class">
@@ -136,6 +177,7 @@
 	  In Matrices and Matrix Calculations, I gained basic knowledge of techniques of matrix calculations and applications of linear algebra. This includes basic matrix operations and row reduction, linear regression, vector projection in any number of dimensions, Fourier Series, Complex Fourier Series, sampling, and Discrete Fourier Series.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Summer 2022</h3>
 	<details class="class">
@@ -151,6 +193,7 @@
 	  In Stanford Online’s Machine Learning course on Coursera, I learned a basic overview of several ML techniques including Supervised Learning (linear regression, logistic regression, neural networks, SVMs), Unsupervised Learning (k-means clustering, PCA for dimensionality reduction, anomaly detection), Special ML Applications (recommender systems, large scale machine learning), and general advice on building a machine learning system (bias/variance, regularization, evaluation of learning algorithms, learning curves, error analysis, ceiling analysis). You can find my programming assignments and course certificate <a href="https://github.com/IshDeshpa/Stanford-Machine-Learning-Coursera">here</a>.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Spring 2022</h3>
 	<details class="class">
@@ -166,6 +209,7 @@
 	  In Differential Equations with Linear Algebra, I studied ordinary differential equations, basic vector and matrix operations, linear operators and eigenvalues, systems of differential equations, partial differentiation, Fourier series and the heat equation.
 	</details>
       </div>
+
       <div class="semester">
 	<h3 class="semester-title">Fall 2021</h3>
 	<details class="class">
