--- a/school/index.html
+++ b/school/index.html
@@ -12,11 +12,11 @@
       <div class="semester">
 	<h3 class="semester-title">Fall 2025</h3>
 	<details class="class">
-	  <summary><b>ECE382M.7: VLSI Design</b></summary>
+	  <summary><b>ECE382M.7: VLSI Design -- Dr. David Pan</b></summary>
 	  This course covered the fundamental process of designing CMOS VLSI circuits. It began with a review of CMOS transistor operation and the CMOS manufacturing process, followed by an in-depth study of CMOS logic gate implementation, including layout, design rules, and circuit families. The course then addressed timing and power analysis, interconnect issues, and techniques for optimizing performance and energy efficiency. Additional topics included datapath design with an emphasis on adders, and memory array design, covering SRAM and DRAM cells and clocking. The course concluded with a survey of peripheral topics such as functional verification, testing and design-for-test, electrical effects, and future trends in VLSI design, with potential guest lectures from industry on real-world design practices.
 	</details>
 	<details class="class">
-	  <summary><b>ECE382V: Quantum Computing Systems: From a Software and Architecture Perspective</b></summary>
+	  <summary><b>ECE382V: Quantum Computing Systems: From a Software and Architecture Perspective -- Dr. Poulami Das</b></summary>
 	  Covers topics such as:
 	  <ul>
 	    <li> Basics of quantum computing (superposition, entanglement) and fundamental quantum algorithms (Bernstein Vazirani, Grover etc.) </li>
